testsuite/tests/patsyn/should_fail/T21479.stderr

T21479.hs:13:1: error:
    • Uninferrable type variable a0 in
      the provided context: (a0 :: *) ~ (Int :: *)
    • In the declaration for pattern synonym ‘T1’
